tests/type_errors/calling_non_function.sy
def main
: Int
: a = f ' 1

def f
: Int
: = 1

--+ expected exit status: 7
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ Int 
--+ ----
--+ <#2 Int > -> _
--+ 
--+ tests/type_errors/calling_non_function.sy
--+   3| : a = f ' 1
--+              ^

